--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <h2>Visa Card</h2>
                 <input type="tel" id="phone" name="phone" placeholder="111-111-111" pattern="[0-9]{3}-[0-9]{1}-[0-9]{3}" required> <br>
                 <label >expirey</label>
-                <input type="date" min="2022-02-24">
+                <input type="date" min="2022-02-24" required>
                 <label >Pin</label>
-                <input type="password" placeholder="1234" maxlength="4">
+                <input type="password" placeholder="1234" maxlength="4" required>
             </div>
             <div class="form-group">
                 <button type="submit">Sign Up</button>
